--- a/src/app/components/user-detail/user-detail.component.css
+++ b/src/app/components/user-detail/user-detail.component.css
@@ -1,11 +1,35 @@
 .user-detail {
-    background-color: #fff;
-    color: #000000;
-    padding: 20px;
-    border-radius: 8px;
-    margin: 30px;
-    flex: 2; 
-    border: 1px solid #ccc; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
+  background-color: #fff;
+  color: #000;
+  padding: 20px;
+  border-radius: 10px;
+  border: 1px solid #000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* Espacio entre los elementos */
+}
+
+.field-group {
+  flex: 1 1 calc(50% - 20px); /* Tamaño de cada campo para que ocupen el 50% del contenedor con un espacio entre ellos */
+  margin-bottom: 20px;
+}
+
+.user-detail label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.user-detail input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #000;
+  border-radius: 20px;
+  box-sizing: border-box;
+}
+
+.user-detail input:focus {
+  outline: none;
+  border-color: #000;
+}
