--- a/src/app/views/panel-administracion/panel-administracion.component.css
+++ b/src/app/views/panel-administracion/panel-administracion.component.css
@@ -6,13 +6,20 @@
 .main-content {
   flex: 1;
   display: flex;
+  padding: 20px;
   flex-direction: column;
 }
 
 .charts {
   display: flex;
   justify-content: space-between;
+  gap: 20px;
   margin-bottom: 20px;
+}
+
+.charts app-chart {
+  flex: 1;
+  margin: 10px;
 }
 
 .user-section {
@@ -23,18 +30,18 @@
 }
 
 /* Ajustes para que los componentes ocupen el mismo alto y se alineen correctamente */
-app-user-list,
-app-user-detail {
+app-user-list {
   flex: 1;
+  margin-right: 10px;
   background-color: #6d6d6d;
   padding: 20px;
   border-radius: 10px;
-}
-
-app-user-list {
   border: 2px solid #00ff;
 }
 
 app-user-detail {
-  background-color: #6d6d6d;
+  flex: 2;
+  background-color: #ffff;
+  padding: 20px;
+  border-radius: 10px;
 }
