se agrega el codigo del sidebar y se agregan imagenes en los datos para las fotos de perfil

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,18 @@
-<!-- sidebar.component.html -->
-<div class="sidebar">
-  <img src="assets/company-logo.png" alt="Company Logo" />
-  <h1>Administrador</h1>
-  <h2>EstraMyPyme</h2>
-  <h3>By Universidad EAFIT</h3>
-</div>
+<body>
+  <section class="login-now">
+    <div class="left-info">
+
+      <div class="logo">
+        <h1>EstraMyPyme</h1>
+        <div class="by-eafit">
+          <h6>By</h6>
+          <img class="imagen-logo" src="https://res.cloudinary.com/dpeqdynym/image/upload/v1721256417/Logo_EAFIT_2015_-_Blanco_wzm6j8.png" width="90" height="40" alt="Logo EAFIT">
+        </div>
+        <p>Evalua y mejora tus estrategias <br> 
+empresariales.</p>
+      </div>
+    </div>
+    <div class="right-info">
+    </div>
+  </section>
+</body>
