--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -1,9 +1,97 @@
-.sidebar {
-    display: flex;
+*{
+  font-family: "Inter", sans-serif;
+}
+body {
+  
+      background-color: black;
+      color: white;
+      margin: 0;
+      height: 100vh;
+      display: flex;
+   }
+.login-now {
+      height: 100%;
+      width: 100%;
+      display: flex;
+  }
+.left-info, .right-info {
+      flex: 1;
+      justify-content: center;
+      align-items: center;
+  }
+
+.left-info {
+       display:flex;
+      justify-content: center;
+      align-items: center;
+  }
+
+.logo{
+
+      padding: 2rem;
+      display: inline-block;
+      
+}
+.by-eafit{
+  margin-top:-3.5rem;
+  margin-left:8rem;
+  display:flex;
+  gap: 1rem;
+  align-items: flex-end;
+}
+
+.imagen-logo {
+    width: 5.8rem;
+    height: 2.5rem;
+    flex-shrink: 0;
+}
+
+
+h1 {
+  font-style: italic;
+  font-size: 2rem; 
+  font-weight: 900;
+}
+
+
+h6 {
+  font-size: 0.875rem;
+}
+
+p {
+  font-size: 1.5rem; 
+  font-weight: 300;
+}
+
+
+@media (max-width: 700px) {
+  .login-now {
     flex-direction: column;
-    align-items: center;
-    background-color: #000;
-    color: #fff;
-    padding: 20px;
+  }
+
+  .by-eafit {
+    margin-top: -3rem;
+    gap: 0.5rem; 
+  }
+
+  .imagen-logo {
+    width: 4.5rem;
+    height: 2rem; 
+  }
+
+  h1 {
+    font-size: 1.5rem; 
+  }
+
+  p {
+    display: none;
   }
   
+  .left-info {
+  flex: 0 0 5%;
+}
+
+.right-info {
+  flex: 0 0 95%; 
+}
+}
