se organiza la extracion de datos de JSON Server y se organizan los bontenes editar guardar y cancelar

--- a/src/app/components/user-detail/user-detail.component.css
+++ b/src/app/components/user-detail/user-detail.component.css
@@ -1,3 +1,9 @@
+/* user-detail.component.css */
+.user-detail-container {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
 .user-detail {
   background-color: #fff;
   color: #000;
@@ -7,11 +13,12 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-wrap: wrap;
-  gap: 20px; /* Espacio entre los elementos */
+  gap: 20px;
+  max-width: 600px;
 }
 
 .field-group {
-  flex: 1 1 calc(50% - 20px); /* Tamaño de cada campo para que ocupen el 50% del contenedor con un espacio entre ellos */
+  flex: 1 1 calc(50% - 20px);
   margin-bottom: 20px;
 }
 
@@ -27,9 +34,57 @@
   border: 1px solid #000;
   border-radius: 20px;
   box-sizing: border-box;
+  background-color: #f0f0f0;
+}
+
+.user-detail input:disabled {
+  background-color: #d3d3d3;
+  cursor: not-allowed;
 }
 
 .user-detail input:focus {
   outline: none;
   border-color: #000;
+}
+
+.button-container {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.edit-button,
+.cancel-button {
+  background-color: transparent;
+  border: 2px solid black;
+  border-radius: 20px;
+  font-weight: bold;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.edit-button:hover,
+.cancel-button:hover {
+  background-color: #6d6d6d;
+  color: #ffffff;
+  border: 2px solid #ffffff;
+}
+
+.user-detail-container::-webkit-scrollbar {
+  width: 12px;
+}
+
+.user-detail-container::-webkit-scrollbar-track {
+  background: #2c2c2c;
+}
+
+.user-detail-container::-webkit-scrollbar-thumb {
+  background-color: #4c4c4c;
+  border-radius: 20px;
+  border: 3px solid #2c2c2c;
+}
+
+.user-detail-container::-webkit-scrollbar-thumb:hover {
+  background-color: #5a5a5a;
 }
