acutualizando para que se actualice el cambio en los imputs

--- a/src/app/views/panel-administracion/panel-administracion.component.html
+++ b/src/app/views/panel-administracion/panel-administracion.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="user-section">
       <app-user-list (userSelected)="selectedUser = $event"></app-user-list>
-      <app-user-detail [user]="selectedUser"></app-user-detail>
+      <app-user-detail [user]="selectedUser" (userUpdated)="updateUser($event)"></app-user-detail>
     </div>
   </div>
 </div>
