se agrego componentes nuevos

--- a/src/app/views/landing-page/landing-page.component.html
+++ b/src/app/views/landing-page/landing-page.component.html
@@ -1,2 +1,6 @@
 <p>landing-page worksss!</p>
-<app-header></app-header>
+<div class="headerlanding">
+    <app-funcionesglobales></app-funcionesglobales>
+    <app-header></app-header>
+
+</div>
