se avanzo en la pantalla presentacion y quienes somos

--- a/src/app/views/landing-page/landing-page.component.html
+++ b/src/app/views/landing-page/landing-page.component.html
@@ -1,6 +1,11 @@
-<p>landing-page worksss!</p>
+<body>
 <div class="headerlanding">
     <app-funcionesglobales></app-funcionesglobales>
     <app-header></app-header>
+</div>
+<div>
+    <app-presentacion></app-presentacion>
+    <app-quienessomos></app-quienessomos>
 
 </div>
+</body>
