--- a/src/app/components/quienessomos/quienessomos.component.html
+++ b/src/app/components/quienessomos/quienessomos.component.html
@@ -1,1 +1,16 @@
-<p>quienessomos works!</p>
+<svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="500" viewBox="0 0 504 800" fill="none">
+    <path  d="M504 291.771C504 420.58 391.827 525 253.454 525C115.082 525 0 420.58 0 291.771C-1.50575e-05 58.541 361.068 -87.6386 253.454 58.5425C391.827 58.5425 504 162.963 504 291.771Z" fill="white"/>
+    <text class="ingresacontenido" x="50%" y="20%" text-anchor="middle" fill="black" dy=".3em" font-weight="500" font-style="normal">
+        <tspan x="50%" dy="1.2em" class="interponer">Estramipyme, una metodología</tspan>
+        <tspan x="50%" dy="1.2em" class="superponer">Fácil y Ágil</tspan>
+        <tspan x="50%" dy="1.2em" class="interponer">que permite a empresarios</tspan>
+        <tspan x="50%" dy="1.2em" class="interponer">reconocer y potenciar</tspan>
+        <tspan x="50%" dy="1.2em" class="interponer">lo que más valoran sus clientes.</tspan>
+        <tspan x="50%" dy="1.2em" class="interponer">Logrando llevar</tspan>
+        <tspan x="50%" dy="1.2em" class="superponer">El conocimiento estratégico</tspan>
+        <tspan x="50%" dy="1.2em" class="superponer">a micronegocios</tspan>
+        <tspan x="50%" dy="1.2em" class="interponer">y pymes colombianas,</tspan>
+        <tspan x="50%" dy="1.2em" class="interponer">mejorando su diferenciación y crecimiento.</tspan>
+    </text>
+</svg>
+<div class="formcaracterizacion">holaaa</div>
