--- a/src/app/views/landing-page/landing-page.component.css
+++ b/src/app/views/landing-page/landing-page.component.css
@@ -1,2 +1,12 @@
+body{
+    background-color: black;
+}
 
+.headerlanding {
+    position: fixed; /* Fija el elemento en la pantalla */
+    top: 0;          /* Alinea el elemento en la parte superior */
+    left: 0;         /* Alinea el elemento a la izquierda */
+    width: 100%;     /* Asegura que el contenedor ocupe todo el ancho de la página */
+    z-index: 1000;   /* Asegura que el contenedor esté por encima de otros elementos */
 
+}
