--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,1 @@
-
-
-body {
- 
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  height: 100vh;
-  }
+/* You can add global styles to this file, and also import other style files */
