agregue boton registrar

--- a/src/app/components/encuentranos/encuentranos.component.html
+++ b/src/app/components/encuentranos/encuentranos.component.html
@@ -8,7 +8,7 @@
             <img src="https://res.cloudinary.com/dpeqdynym/image/upload/v1721256417/Logo_EAFIT_2015_-_Blanco_wzm6j8.png" width="60px"alt="Logo"> <!-- Asegúrate de reemplazar el src con la ruta de tu imagen -->
         </div>
         <div class="item item2">
-            <h2 class="titulo">Estramypyme</h2>
+            <h2 class="titulo">EstraMyPyme</h2>
             <h3>Contáctanos</h3>
             <p>¿Tienes alguna pregunta o necesitas más información? ¡Nos encantaría saber de ti!</p>
             <p>Email: contacto tusitio.com</p>
