--- a/src/app/components/razonsocial/razonsocial.component.html
+++ b/src/app/components/razonsocial/razonsocial.component.html
@@ -13,6 +13,5 @@
             <tspan x="50%" dy="1.2em" class="interponer">formalizarse y crecer</tspan>
         </text>
     </svg>
-    
-
+    <button class="registratelanding">REGISTRATE <BR> AHORA</button> 
 </body>
