--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,6 +1,1 @@
-<!-- chart.component.html -->
-<div class="chart">
-    <h2>Title</h2>
-    <canvas id="chartCanvas"></canvas>
-  </div>
-  
+<div #chartContainer class="chart-container"></div>
