--- a/src/app/components/chart/chart.component.css
+++ b/src/app/components/chart/chart.component.css
@@ -1,5 +1,9 @@
+text {
+  font-size: 10px;
+}
+
 .chart-container {
-  position: relative;
-  height: 500px; /* Aumenta la altura para que se vea mejor */
-  width: 100%;
+  width: 300px;
+  height: 300px;
+  margin: auto;
 }
