--- a/src/app/views/registro/registro.component.html
+++ b/src/app/views/registro/registro.component.html
@@ -4,6 +4,9 @@
 
      <!-- Contenedor de controles (cambio de tema y selección de idioma) -->
      <div class="modos">
+
+
+
      <div class="modos1">
      <div class="langua">
         <!-- Lista desplegable para seleccionar el idioma -->
@@ -294,7 +297,7 @@
                     </label>
                 </div>
               
-                  <div class="terms">
+                  <div class="terms te">
                     <input type="checkbox" formControlName="acceptTerms" id="acceptTerms1" autocomplete="off">
                     <label for="acceptTerms">Acepto <span class="color">Términos y Condiciones</span> y <span class="color">Políticas de protección de Datos</span></label>
                   </div>
