--- a/src/app/views/registro/registro.component.html
+++ b/src/app/views/registro/registro.component.html
@@ -4,7 +4,7 @@
 
 
    <div class="todo">
-    <button   routerLink="/" class="main" id="mainButton" (click)="toggleButtons()"></button>
+    <button   class="main" id="mainButton" (click)="toggleButtons()"></button>
     
     </div>
      
@@ -13,8 +13,8 @@
      <!-- Contenedor de controles (cambio de tema y selección de idioma) -->
      <div class="modos">
 
-      <div>
-        <button class="home"></button>
+    <div>
+        <button  routerLink="" class="home"></button>
     </div>
 
      <div class="modos1">
